--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -6,29 +6,23 @@
     h1 {
       margin: 0;
     }
-    p, h3 {
-      padding: 0 50px;
-    }
-    h3 {
-      margin-top: 25%;
-    }
   }
-  .contactImg {
+  .contactBottom {
+    margin-top: 15%;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    height: 100vh;
-    padding-top: 200px;
+    justify-content: space-between;
     img {
       width: 300px;
       height: 300px;
     }
   }
   .contactMe {
+    margin: 10px;
     li {
-      padding: 10px;
       font-size: 18px;
       list-style: none;
+      margin-bottom: 10px;
       a {
         &:hover {
           color: $mainAqua;
